# product_shop

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  script.py
config/: settings.py  urls.py
main/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
main/migrations/: 0001_initial.py
users/: admin.py  models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
